resources/assets/css/additional.css
.portfolio__tab_button{
  display:flex;
  align-items: center; /* Vertical center alignment */
  justify-content: center;
  text-align: center;
}

.portfolio__item {
  width: 33%;
  cursor: pointer;
}

.tabs_buttons {
  flex-wrap: wrap;
  justify-content: space-evenly!important;
}

.portfolio__tab_button {
  height: 42px;
}

.modal__page_close {
  width:62px;
  height: 62px;
  background: url('../img/close.png');
}

.modal__page_close {
  top: -31px;
  right: -31px;
}

.modal_page_content {
  max-height: 95vh;
  height: 80vh;
  max-width: 1024px;
}

.bim__video_wrapper {
  width: calc(100vw - 17px);
}

.no-capitalize {
  text-transform: none;
}

.service-choice-wrapper{
  display: flex;
}

.param__modeling p{
  padding-right: 24px!important;
}

.contact-button {
  width: 145px;
  text-align: center;
}

.portfolio__slick_outer .slick-prev {
  width: 45px;
  left: -45px;
}

.portfolio__slick_outer .slick-next {
  width: 45px;
  right: -45px;
}

.benefits-item h3, .benefits-item h4 {
  padding-left: 30px;
}

.tech__stripe img {
  -webkit-filter: grayscale(70%); /* Safari 6.0 - 9.0 */
  filter: grayscale(70%);
}

.border-radius-5 {
  border-radius: 5px ;
}

.service {
  display: flex;
  align-items: center;
}

.service__avatar {
  position: relative;
}
.service__avatar:before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(to bottom, rgba(0,0,0, 0.0), rgba(0,0,0, 0.7));
}

.service__floating_text {
  position: absolute;
  width: 90%!important;
  height: 80%!important;;
  margin: auto;
  left:0;
  top:0;
  right:0;
  bottom:0;

  -ms-flex-align: center!important;
  align-items: center!important;
  
  -ms-flex-pack: center!important;
  justify-content: center!important;
  
  -ms-flex-wrap: wrap!important;
  flex-wrap: wrap!important;
  
  display: -ms-flexbox!important;
  display: flex!important;
}

#software {
  background-image: url(../img/callback_bg.png?240119);
}

.service__bg {
  background-size: cover;
  width:100%;
  height:100%;
  background-repeat: no-repeat;
  position: relative;
}

.service__block {
  padding: 7px;
  cursor: pointer;
}

.service__bg:before {
  content: '';
  background-color: rgba(0, 0, 0, .6);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  transition: opacity, .5s;
}

.service__bg:hover:before {
  opacity: 0;
}

.service__bg > div {
  width: 100%;
  height: 100%;
  
}

.service__back_button{
  cursor: pointer;
  border-radius: 5px;
  width: 100%;
  display: block;
  text-align: center;
  margin-top: 15px;
}

.service__back_button:not([href]):not([tabindex]):focus, .service__back_button:not([href]):not([tabindex]):hover,
.service__back_button:hover{
  background: #000;
  color: #fff;
  transition: 0.5s;
}

.worker-point {
  min-width: 25px;
  min-height: 25px;
  border-radius: 25px;
  border: 5px solid #d0a903;
}

.worker__tech-list_header {
  list-style: none;
  font-weight: bold;
  margin-bottom: 5px;
  font-size: 18px;
  margin-left: -20px;
}

.worker__tech-list_item {
  /*font-family: "Open Sans Bold", sans-serif;*/
  font-size: 14px;
}

.tabs-name {
  display: flex;
  justify-content: space-evenly;
  flex-wrap: wrap;
  align-items: center;
  text-align: center;
  margin: 0 auto;
  width: 100%;
}
.tabs-name > div {
  display: inline-block;
  padding: 3px 7px;
  font-size: 14px;
  color: #14161D;
  cursor: pointer;
  background: #ddd;
  border-radius: 5px;
  white-space: nowrap;
  margin: 2px;
}
.tabs-name > div:hover{
  background-color: #454545;
  color: #fff;
}
.tabs-name > div.active {
  background-color: #454545;
  color: #fff;
}

.tabs-name.portfolio {
  margin: 10px 0;
}
.tabs-name.portfolio > div {
  width: 19%;
  margin: 5px 2px;
  padding: 5px 2px;
  font-weight:bold ;
  white-space: normal;
}

.tabs-name.portfolio > div:hover, .tabs-name.portfolio > div.active {
  background-color: #d0a903;;
  color: #000;
}


.modal__slick {
  border-radius: 10px;
}

.modal__slick .slick-list {
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

.modal__slick.slick-slider {
  height: 100%;
}

.modal__slick-prev-optimized{
  height: 100%;
  width: 45px;
  left: 0;
  top: 0;
  position: absolute;
  font-family: monospace;
  font-size: 44px;
  color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  /*background-color: #454545;*/
  background-color: rgba(0, 0, 0, 0.2);
  cursor: pointer;
  z-index: 998;
  border-top-left-radius: 10px;
}
.modal__slick-next-optimized{
  height: 100%;
  width: 45px;
  right: 0;
  top: 0;
  position: absolute;
  font-family: monospace;
  font-size: 44px;
  color: #fff;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.3);
  cursor: pointer;
  z-index: 998;
  border-top-right-radius: 10px;
}
.modal__slick-next-optimized:hover, .modal__slick-prev-optimized:hover{
  /*background-color: #232323;*/
  background-color: rgba(0, 0, 0, 0.8);
  transition: 1s;
}

.modal__slick_item > div {
  height: 425px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: auto;
}

.modal__slick_text {
  border-radius: 0 0 10px 10px;
}

.modal__slick_text p{
  margin-bottom: 8px;
}

.modal__page_close {
  z-index: 999;
}

.modal_page_content {
  border-radius: 10px;

  height: auto;
  max-height: initial;

  left:50%;
  top: 50%;
  right: initial;
  bottom: initial;
  
  width: auto;
  
  position: absolute;
  transform: translate(-50%, -50%);
}

.modal_callback_content_w_time .modal_callback_user_time_block {
  display: block;
}

.worker__portfolio{
  margin: 15px 0;
  padding: 0 15px;
  width: 100%;
  display: flex;
  justify-content: space-between;
}
.worker__portfolio_item{
  width: 350px;
  height: 195px;
  display: flex;
  align-items: flex-end;
  background-color: rgba(0, 0, 0, 0.6);
  background-blend-mode: overlay;
}
.worker__portfolio_item:hover{
  background-color: transparent;
  text-decoration: none;
  transition: 0.5s;
}
.worker__portfolio_item > p{
  font-family: "Open Sans Regular", sans-serif;
  font-weight: 400;
  line-height: 1.5;
  font-size: 16px;
  margin-left: 10px;
  color: #fff;
}
.worker__portfolio_1{
  background-size: cover;
  background-position: center center;
}

.portfolio__item {
  background-size: auto;
}

@media only screen and (max-width: 600px) {
  .worker__tech-list_header {
    margin-left: 0;
  }
  
  .modal__slick-prev-optimized {
    left: 0;
    z-index: 999;
  }
  
  .modal__slick-next-optimized {
    right: 0;
    z-index: 999;
  }
  
  .modal__slick_text {
    padding: 10px 55px;
  }
}

@media screen and (min-width:280px) {
  .service__block  {
    height: 160px;
  }
}
@media screen and (min-width:320px) {
  .service__block {
    height: 200px
  }
}
@media screen and (min-width:992px) {
  .service__block {
    height: 240px;
  }
}
@media screen and (min-width:1200px) {
  .service__block {
    height: 240px;
  }
  .worker__tech-list_item {
    padding-right: 35px;
  }
  .worker-description__wrapper .description_text {
    padding-right: 35px;
  }
}

@media (max-width: 992px) {
  .tabs-name.portfolio > div {
    width: 25%;
  }
}


@media (max-width: 768px) {
  .tabs-name.portfolio > div {
    width: 30%;
  }
}

@media (max-width: 540px){
  .portfolio__item {
    width: 100%;
  }
  
  .team__mobile_col {
    padding: 0;
  }
  
  .worker__mobile_mr {
    margin-right: 2%;
    margin-left: 0;
  }
  
  .worker__mobile_ml {
    margin-left: 2%;
    margin-right: 0;
  }
  
  .team__mobile {
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: flex-start;
    align-items: stretch;
    height: auto;
  }
  
  .worker__mobile {
    line-height: 18px;
    width: 48%;
    height: 55px;
    min-height: 55px;
    margin-bottom: 5px;
    margin-top: 5px;
  }
  
  .tabs-name.portfolio > div {
    width: 46%;
  }
}

@media screen and (min-width: 280px) {
  .modal_callback_content_w_time #modal_callback_user_time {
    margin-right: 0;
    width:100%;
    min-width: 160px;;
    max-width: 320px;
  }
  
  .modal_callback_content_w_time #modal_callback_user_time_block {
    text-align: center!important;
  }
}

@media screen and (min-width: 576px) {
  .modal_callback_content_w_time {
    max-height: 400px;
  }
  
  .modal_callback_content_w_time #modal_callback_user_time {
    margin-right: 1.9rem;
    width:100px;
    min-width: 100px;
    max-width: 100px;
  }
  
  .modal_callback_content_w_time #modal_callback_user_time_block label {
    text-align: right!important;
  }
  
  .modal_callback_content_w_time #modal_callback_user_time_block {
    text-align: right!important;
  }
}

@media (max-width: 768px) {
  .worker__portfolio_item{
    width: 49%;
  }
  .worker__portfolio_item:nth-child(3) {
    display: none;
  }
}
@media (max-width: 540px) {
  .worker__portfolio {
    padding: 0;
  }
}

/* new slider */
@media (max-width: 540px) {
  .portfolio__item_lg, .portfolio__item {
    height: 100%;
  }
}

.modal__fancybox {
  height: 100%;
  background-color: transparent;
}
.modal__fancybox_helper {
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.modal__fancybox img {
  width: auto;
  max-width: 100%;
  height: auto;
  max-height: 95%;
  margin: 0 auto;
}

.fancybox-content {
  padding: 0;
}

.fancybox-slide {
  padding: 0 !important;
}
.fancybox-container .fancybox-caption {
  padding: 10px 0 10px 50vw;
  border-top: none;
  background: rgba(30, 30, 30, 0.75);
  text-align: left;
}
.fancybox-container .fancybox-caption p:last-child {
  margin-bottom: 0;
}
.fancybox-button--arrow_left,
.fancybox-button--arrow_right {
  background-color: transparent;
}
.fancybox-button--arrow_left .slick-arrow {
  border-radius: 0 10px 10px 0;
}
.fancybox-button--arrow_right .slick-arrow {
  border-radius: 10px 0 0 10px;
}
@media screen and (max-width:992px) {
  .fancybox-container .fancybox-caption {
    padding: 10px;
  }
}
@media screen and (max-width:540px) {
  .fancybox-container .fancybox-caption {
    font-size: 12px;
  }
}


/***/
/* Workers */

.worker__1{
  top: 300px;
  left: 5%;
}
.worker__2{
  top: 210px;
  left: 13%;
}
.worker__3{
  top: 140px;
  left: 20%;
}
.worker__4{
  top: 105px;
  left: 26%;
}
.worker__5{
  top: 95px;
  left: 47%;
}
.worker__6{
  top: 130px;
  left: 51%;
}
.worker__7{
  top: 180px;
  left: 56%;
}
.worker__8{
  top: 242px;
  left: 68%;
}
.worker__9{
  top: 60px;
  left: 55%;
}


@media (max-width: 1200px){
  .worker__1{
    top: 300px;
    left: 5%;
  }
  .worker__2{
    top: 200px;
    left: 18%;
  }
  .worker__3{
    top: 135px;
    left: 26%;
  }
  .worker__4{
    top: 100px;
    left: 34%;
  }
  .worker__5{
    top: 95px;
    left: 64%;
  }
  .worker__6{
    top: 130px;
    left: 70%;
  }
  .worker__7{
    top: 185px;
    left: 76%;
  }
  .worker__8{
    top: 250px;
    left: 93%;
  }
  .worker__9{
    top: 40px;
    left: 73%;
  }
}


@media (max-width: 768px) {
  .worker__1 {
    top: 245px;
    left: 5%;
  }
  .worker__2 {
    top: 170px;
    left: 18%;
  }
  .worker__3 {
    top: 135px;
    left: 26%;
  }
  .worker__4 {
    top: 116px;
    left: 34%;
  }
  .worker__5 {
    top: 122px;
    left: 64%;
  }
  .worker__6 {
    top: 146px;
    left: 70%;
  }
  .worker__7 {
    top: 180px;
    left: 76%;
  }
  .worker__8 {
    top: 215px;
    left: 93%;
  }
  .worker__9 {
    top: 90px;
    left: 73%;
  }
}


@media (max-width: 540px){
  .team_foto{
    position: relative;
    height: 295px;
  }
  
  .worker__1{
    top: 46%;
  }
  .worker__2{
    top: 24%;
  }
  .worker__3{
    top: 13%;
  }
  .worker__4{
    top: 8%;
  }
  .worker__5{
    top: 11%;
  }
  .worker__6{
    top: 18%;
  }
  .worker__7{
    top: 32%;
  }
  .worker__8{
    top: 38%;
    left: 90%;
  }
  .worker__9{
    top: 8%;
  }
}


@media (max-width: 425px){
  /*.worker__1{*/
  /*top: 17%;*/
  /*}*/
}

